# SlicerUltrasound

./: .gitignore
AdjudicateUltrasound/: AdjudicateUltrasound.py
AnnotateUltrasound/: AnnotateUltrasound.py
AnonymizeUltrasound/: AnonymizeUltrasound.py  CMakeLists.txt  _version.py.in
AnonymizeUltrasound/common/: dicom_file_manager.py  version_info.py
AnonymizeUltrasound/common/tests/: test_version_info.py
AnonymizeUltrasound/tests/: test_anonymize_ultrasound_logic.py
